@@ -5,12 +5,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.roda_project.commons_ip.utils.IPException;
 import org.roda_project.commons_ip.utils.METSEnums;
+import org.roda_project.commons_ip2.cli.model.enums.WriteStrategyEnum;
+import org.roda_project.commons_ip2.cli.utils.SIPBuilderUtils;
 import org.roda_project.commons_ip2.model.IPAgent;
 import org.roda_project.commons_ip2.model.IPAgentNoteTypeEnum;
 import org.roda_project.commons_ip2.model.IPContentInformationType;
@@ -21,6 +24,7 @@ import org.roda_project.commons_ip2.model.IPMetadata;
 import org.roda_project.commons_ip2.model.IPRepresentation;
 import org.roda_project.commons_ip2.model.MetadataType;
 import org.roda_project.commons_ip2.model.SIP;
+import org.roda_project.commons_ip2.model.impl.eark.out.writers.strategy.WriteStrategy;
 import org.roda_project.commons_ip2.utils.RepresentationUtils;
 import org.roda_project.commons_ip2.utils.Utils;
 import org.slf4j.Logger;
@@ -48,11 +52,11 @@ public class SIPRepresentativityTest {
   @Test
   public void buildEARKSip2withFolders() throws IPException, InterruptedException {
     LOGGER.info("Creating EARK SIP 2");
-    Path zipSIPS = createEARKSip2withFolders();
+    createEARKSip2withFolders();
     LOGGER.info("Done creating full E-ARK SIP-S");
   }
 
-  private Path createEARKSip2withFolders() throws IPException, InterruptedException {
+  private void createEARKSip2withFolders() throws IPException, InterruptedException {
     // 1) instantiate E-ARK SIP object
     SIP sip = new EARKSIP("SIP_1", IPContentType.getMIXED(), IPContentInformationType.getMIXED(), "2.1.0");
     sip.addCreatorSoftwareAgent("RODA Commons IP", "2.0.0");
@@ -69,7 +73,7 @@ public class SIPRepresentativityTest {
     // 1.3) add preservation metadata (SIP level)
     IPMetadata metadataPreservation = new IPMetadata(
       new IPFile(Paths.get("src/test/resources/eark/metadata_preservation_premis.xml")))
-        .setMetadataType(MetadataType.MetadataTypeEnum.PREMIS);
+      .setMetadataType(MetadataType.MetadataTypeEnum.PREMIS);
     sip.addPreservationMetadata(metadataPreservation);
 
     // 1.4) add other metadata (SIP level)
@@ -91,7 +95,7 @@ public class SIPRepresentativityTest {
     sip.addDocumentation(new IPFile(Paths.get("src/test/resources/eark/documentation.pdf")));
 
     // 1.7) set optional RODA related information about ancestors
-    sip.setAncestors(Arrays.asList("b6f24059-8973-4582-932d-eb0b2cb48f28"));
+    sip.setAncestors(List.of("b6f24059-8973-4582-932d-eb0b2cb48f28"));
 
     // 1.8) add an agent (SIP level)
     IPAgent agent = new IPAgent("Agent Name", "OTHER", "OTHER ROLE", METSEnums.CreatorType.INDIVIDUAL, "OTHER TYPE", "",
@@ -109,8 +113,7 @@ public class SIPRepresentativityTest {
     }
 
     // 2) build SIP, providing an output directory
-    final Path zipSIP = sip.build(tempFolder);
-
-    return zipSIP;
+    WriteStrategy writeStrategy = SIPBuilderUtils.getWriteStrategy(WriteStrategyEnum.ZIP, tempFolder);
+    sip.build(writeStrategy);
   }
 }
